Skip to content

vlc 1.1 hangs with unresponsive vout window on end of clip when video was fullscreen

tested against win32/trunk-20100411-0002.

start video clip, go fullscreen, seek to the end and let it finish. VLC will try to redraw the "standard" view but will only show a black vout which is unresponsive. does not seem to crash (tried in GDB) and is unrelated to video mode directx/direct3c/opengl. happens with all. last seen in logger is:

[0208fc88] glwin32 generic debug: DirectXEventThread terminating
[0208fc88] glwin32 generic debug: DirectXCloseWindow
[0208fc88] glwin32 generic debug: WinProc WM_DESTROY
[020faa68] qt4 window debug: releasing video...
[00e2f268] qt4 interface debug: Video is not needed anymore

might be rlated to #3359 (closed)

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information