Qt4: Fix the VLC hangging in fullscreen on Win32

Close #3513